- Fix _x_io_select exiting when the select has been interrupted (EINTR errno)   when we want to run until the timeout has occurred, partially fixes   Totem's browser plugin playing back browser streams with the xine-lib   backend

See http://bugzilla.gnome.org/show_bug.cgi?id=375866 for details